src/test/resources/valid_programs/if_else__else_branch_executes.notc
void main() {
    if (false)
        printInt(5);
    else
        printInt(0);
}
