src/test/resources/syntax_errors/stm_outside_fun.notc
if (true) {
    int x = 45;
}

void main() {
}
